--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>boop</title>
     <link rel="shortcut icon" href="./assets/img/4geeks.ico" />
+    <link rel="stylesheet" href="/src/style/index.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <script
       src="https://kit.fontawesome.com/072e5df971.js"
       crossorigin="anonymous"
@@ -81,7 +88,39 @@
         </select>
       </li>
     </ul>
-    <div id="widget_content"></div>
+    <div id="widget_content">
+      <div class="widget">
+        <div class="cover">
+          <img src="https://the_url.com/for_the_background.png" />
+        </div>
+        <img src="https://the_url.com/for_the_image.png" class="photo" />
+        <h1>Ryan Boylett</h1>
+        <h2>Web Developer</h2>
+        <h3>Miami, USA</h3>
+        <ul class="position-right">
+          <li>
+            <a href="https://twitter.com/alesanchezr"
+              ><i class="fa fa-twitter"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://github.com/alesanchezr"
+              ><i class="fa fa-github"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://linkedin.com/alesanchezr"
+              ><i class="fa fa-linkedin"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://instagram.com/alesanchezr"
+              ><i class="fa fa-instagram"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </div>
     <!-- do not remove this bundle.js tag -->
     <script type="text/javascript" src="/main.bundle.js"></script>
   </body>
